:lipstick: Change height

--- a/public/index.html
+++ b/public/index.html
@@ -28,10 +28,24 @@
   <link rel="stylesheet" type="text/css"
     href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
   <style>
+    html,
+    body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
     body {
       font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', 'Apple SD Gothic Neo', 'Noto Sans KR', 'Malgun Gothic', sans-serif;
       background-image: linear-gradient(to top, #9890e3 0%, #b1f4cf 100%);
       background-attachment: fixed;
+    }
+
+    main {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
     }
   </style>
   <title>React App</title>
@@ -39,7 +53,7 @@
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <main id="root"></main>
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
